2004-09-05  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in (ALL_LINGUAS): Added 'th' (Thai).

2004-08-28  Akagic Amila  <bono@linux.org.ba>

        * configure.in: Added 'bs' to ALL_LINGUAS.

2004-08-24  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in:

2004-08-16  Owen Taylor  <otaylor@redhat.com>

	* gtksourceview/gtksourceprintjob.c (get_text_with_style): Handle
	the case where a tag toggle falls exactly at the paragraph
	separator.

2004-08-08  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* gtksourceview/language-specs/css.lang: CSS highlighting spec, by
	Scott Martin (bug #130597)
	* gtksourceview/language-specs/fortran.lang: Fortran highlighting,
	by John Spray (bug #143970)
	* gtksourceview/language-specs/javascript.lang: Javascript
	highlighting rules, by Scott Martin (bug #139871)
	* gtksourceview/language-specs/pascal.lang: Pascal highlighting
	rules, by Andrew Johnson (bug #138863)
	* gtksourceview/language-specs/Makefile.am: Added new files.

=== gtksourceview 1.1.0 ===

2004-08-01  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* NEWS:
	* README:
	* HACKING: Updated files for new release.

2004-07-22  Travis Snoozy  <ai2097@yahoo.com>
	
	* gtksourceview/language-specs//texinfo.lang: 
	Created an initial texinfo highlighting definition. Most (all?) of 
	the keywords are picked up. Still needs work :).

2004-07-21  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* gtksourceview/gtksourceiter.c (forward_chars_with_skipping) 
	(pointer_from_offset_skipping_decomp): Use g_utf8_normalize()
	instead of g_unicode_canonical_decomposition() to calculate
	normalized character lengths.

2004-07-21 Duncan <dc_junk@yahoo.co.uk>

	* gtksourceview/language-specs/haskell.lang: new file, adds support
	for Haskell language. First version of the file by Anders Carlsson
	<andersca@gnome.org>.

2004-07-21 John Luke <jluke@cfl.rr.com>

	* gtksourceview/language-specs/vbnet.lang: new file, adds support
	for VB.NET language.
